--- a/docker-compose-desktop.yml
+++ b/docker-compose-desktop.yml
@@ -4,7 +4,7 @@ services:
   school:
     build:
       context: ./
-      target: school
+      target: school_desktop
     ports:
      - "8888:8888" #default Jupyter port
      - "6006:6006" #tensorboard
